--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.7",
     "request": "^2.85.0",
     "token": "^0.1.0",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
