--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.7",
     "request": "^2.85.0",
     "token": "^0.1.0",
     "vue": "^2.5.11",
+    "vue-baidu-map": "^0.21.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
